changed init sql

--- a/QuizApp/QuizApp.WASM/Pages/Submissions.razor
+++ b/QuizApp/QuizApp.WASM/Pages/Submissions.razor
@@ -17,7 +17,7 @@
                             <MudListItem>
                                 <MudNavLink
                                     Href="@UrlHelpers.GetSubmissionLink(exam.id,sub.Id!.ToString())"    
-                                >@sub.SubmissionPersonName</MudNavLink>
+                                >@sub.UserId</MudNavLink>
                             </MudListItem>
                         }
                     }
